fetch json data on page load

--- a/www/index.html
+++ b/www/index.html
@@ -2,17 +2,27 @@
     <html> 
     <head> 
         <meta charset="utf-8"> 
-        <title>Basic Web Page Template</title>
+        <title>Simple JSONP API with Node.js and MongoDB</title>
         <link rel="stylesheet" href="css/style.css">   
     </head>   
     <body>
         <article>
             <div class="box">
-                <h1>Title</h1>
-                <h2>Sub-Title</h2>
+                <h1>Simple JSONP API with Node.js and MongoDB </h1>
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin lacinia pulvinar ante sed iaculis. Aenean sodales orci id turpis lacinia, eget condimentum urna <a href="#">viverra</a>. Ut libero eros, tristique nec rhoncus sed, suscipit sit amet justo. Suspendisse quis erat faucibus, ultricies lacus sit amet, vestibulum dui.
+                Lorem ipsum dolor sit amet..
                 </p>
+            </div>
+            <div class="box data-container">
+                <div class="refresh-button-container">
+                    <button class="refresh-button">Refresh Data</button>
+                </div>
+                <div class="ajax-spinner-container">
+                    <img src="images/ajax-loader-ellipsis.gif" alt="ajax loader">
+                </div>
+                <ul class="data-list">
+
+                </ul>
             </div>
         </article>
         <script src="js/jquery-3.2.1.min.js"></script>
